--- a/.env.template
+++ b/.env.template
@@ -8,16 +8,18 @@ APP_ENV=dev
 INTERFACE=127.0.0.1
 
 #php-container
-#[from 5.6 to 7.3]
+#[from 7.0 to 7.3]
 PHP_VERSION=7.2
-#[php-56|php-7] - php-56 for 5.6 and php-7 for 7.x
-PHP_TARGET=php-7
+#[0|2] - 2 for php <= 7.1 and 0 for php >= 7.2
+PHP_MBSTRING_FUNC_OVERLOAD=0
 # [1.10.16|2.0.2] see - https://getcomposer.org/download/
 COMPOSER_VERSION=1.10.16
-# [true|false] fur ssh server in php container
+# [true|false] run ssh server in php container
 SET_UP_SSH_SERVER=false
 PHP_FPM_PORT=10000
 SSH_PORT=2222
+# [true|false] instal mailhog in php container to test mail
+SET_UP_MAILHOG=false
 
 #XDEBUG
 # must be the same as your ide
@@ -31,6 +33,11 @@ XDEBUG_DISCOVER_CLIENT_HOST=false
 #For version lower than 3
 XDEBUG_REMOTE_ENABLE=1
 XDEBUG_CONNECT_BACK=0
+
+
+#mailhog-container
+MAILHOG_SMPT_PORT=1025
+MAILHOG_WEB_PORT=8025
 
 
 #mysql-container
