Fix some errors

--- a/.env.template
+++ b/.env.template
@@ -18,7 +18,7 @@ COMPOSER_VERSION=1.10.16
 SET_UP_SSH_SERVER=false
 PHP_FPM_PORT=10000
 SSH_PORT=2222
-# [true|false] instal mailhog in php container to test mail
+# [true|false] install mailhog in php container to test mail
 SET_UP_MAILHOG=false
 
 #XDEBUG
