--- a/images/php/Dockerfile
+++ b/images/php/Dockerfile
@@ -61,7 +61,7 @@ RUN if [ "$SET_UP_MAILHOG" = "true" ]; \
     then curl -sSL https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 -o mhsendmail \
     && chmod +x mhsendmail \
     && mv mhsendmail /usr/local/bin/mhsendmail \
-    && echo 'sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"' > /usr/local/etc/php/php.ini; \
+    && echo 'sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"' >> /usr/local/etc/php/php.ini; \
     fi
 ###############endregion###############
 
