--- a/images/php/php.ini
+++ b/images/php/php.ini
@@ -1,4 +1,4 @@
-mbstring.func_overload = 0
+mbstring.func_overload = @mbstring_func_overload@
 mbstring.internal_encoding = 'UTF-8'
 
 safe_mode = 0
