Add socket extension to container

--- a/images/php/Dockerfile
+++ b/images/php/Dockerfile
@@ -14,7 +14,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ 
 RUN docker-php-ext-install mysqli -j$(nproc) gd calendar mbstring opcache && \
 docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
 docker-php-ext-configure opcache --enable-opcache && \
-docker-php-ext-install gd
+docker-php-ext-install gd && docker-php-ext-install sockets
 
 RUN if [ "${PHP_VERSION%.*}" \< "7.3" ];then docker-php-ext-install -j$(nproc) zip; fi
 
