Add cron, change readme and some .env variables

--- a/.env.template
+++ b/.env.template
@@ -15,11 +15,11 @@ PHP_MBSTRING_FUNC_OVERLOAD=0
 # [1.10.16|2.0.2] see - https://getcomposer.org/download/
 COMPOSER_VERSION=1.10.16
 # [true|false] run ssh server in php container
-SET_UP_SSH_SERVER=false
+SET_UP_SSH_SERVER=N
 PHP_FPM_PORT=10000
 SSH_PORT=2222
 # [true|false] install mailhog in php container to test mail
-SET_UP_MAILHOG=false
+SET_UP_MAILHOG=N
 
 #XDEBUG
 # must be the same as your ide
