--- a/images/php/conf.d/99-xdebug.ini
+++ b/images/php/conf.d/99-xdebug.ini
@@ -3,14 +3,15 @@ xdebug.remote_port = 9003
 xdebug.remote_handler = dbgp
 xdebug.idekey = "PHPSTORM"
 xdebug.max_nesting_level = 250
+xdebug.log_level = 1
 xdebug.profiler_enable_trigger = 0
 xdebug.profiler_output_dir = "/tmp/"
 xdebug.profiler_output_name = "cachegrind.out.%H%R"
 xdebug.remote_host = "127.0.0.1"
 xdebug.remote_log = "/var/log/php/xdebug.log"
 ;The following params for version higher or equal 3
-xdebug.mode=debug
-xdebug.start_with_request = default
+;xdebug.mode=off it will be added like a new string in dockerfile
+xdebug.start_with_request = trace
 xdebug.discover_client_host = false
 ;The following params for version lower than 3
 xdebug.remote_enable=0
