--- a/.env.template
+++ b/.env.template
@@ -22,6 +22,7 @@ SSH_PORT=2222
 SET_UP_MAILHOG=N
 
 #XDEBUG
+XDEBUG_VERSION=3.0.0
 # must be the same as your ide
 XDEBUG_PORT=9003
 # [host.docker.internal|172.17.0.1] 172.17.0.1 - docker's default interface
