Add memcache, remove node

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,9 @@ DATA_PATH=@PATH_TO_DOCKER_DATA@
 DOMAIN=@YOUR_PROJECT_DOMAIN@
 APP_ENV=dev
 
+USER_ID=1000
+GROUP=www-data
+
 INTERFACE=127.0.0.1
 
 #php-container
@@ -12,17 +15,23 @@ INTERFACE=127.0.0.1
 PHP_VERSION=7.2
 #[0|2] - 2 for php <= 7.1 and 0 for php >= 7.2
 PHP_MBSTRING_FUNC_OVERLOAD=0
-# [1.10.16|2.0.2] see - https://getcomposer.org/download/
-COMPOSER_VERSION=1.10.16
-# [true|false] run ssh server in php container
-SET_UP_SSH_SERVER=N
 PHP_FPM_PORT=10000
+# [1.10.16|2.0.2|empty to latest] see - https://getcomposer.org/download/
+COMPOSER_VERSION=''
+# [Y|N] run ssh server in php container
+SET_UP_SSH_SERVER=N
 SSH_PORT=2222
-# [true|false] install mailhog in php container to test mail
+# [Y|N] install mailhog in php container to test mail
 SET_UP_MAILHOG=N
+# [Y|N] install memcache extension
+SET_UP_MEMCACHE=Y
+#[4.0.5.2|empty to latest]
+MEMCACHE_VERSION='4.0.5.2'
+
 
 #XDEBUG
-XDEBUG_VERSION=3.0.0
+# [2.9.3|3.0.0|empty to latest]
+XDEBUG_VERSION=''
 # must be the same as your ide
 XDEBUG_PORT=9003
 # [host.docker.internal|172.17.0.1] 172.17.0.1 - docker's default interface
@@ -54,19 +63,7 @@ DB_USER_BITRIX=root
 DB_PASSWORD_BITRIX=@DB_ROOT_PASSWORD@
 DB_PORT=3306
 
-
 #nginx-container
 #[^(.+)(.@YOUR_PROJECT_DOMAIN@)$] use if you need to specify root folder. Do not use the "/" symbol
 NGINX_ROOT_REGEXP=
 NGINX_ROOT_CONDITION_NUMBER=1
-
-#node-container
-# [latest|12.18]
-# Some packages might not be installed because git version, then you may set version like: 12.18-buster
-NODE_VERSION=12.18
-NODE_PORT=3000
-#optional command which start dev server to keep container alive or just build your js once
-NODE_COMMAND=
-
-#other
-USER=www-data
