--- a/images/nginx/sites/default.conf
+++ b/images/nginx/sites/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80 default;
+    listen 443 ssl http2 default;
 
     server_name @PROJECT_DOMAIN@;
     set $sathost public;  # В sathost будет лежать имя сайта. Так же должна называться директрия с сайтом
