--- a/images/nginx/sites/default.conf
+++ b/images/nginx/sites/default.conf
@@ -5,6 +5,11 @@ server {
     server_name @PROJECT_DOMAIN@;
     set $sathost public;  # В sathost будет лежать имя сайта. Так же должна называться директрия с сайтом
 
+    ssl_certificate          /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key   /etc/ssl/private/nginx-selfsigned.key;
+    ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+
     # Dynamic prefix
     if ( $host ~ @NGINX_ROOT_REGEXP@ ) {
         set $sathost $@NGINX_ROOT_CONDITION_NUMBER@;
