Upgrade to 2 version
- php starts by supervisord
- removed config for xdebug lower than 3
- remove some ask for database
- optimize init.sh

--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ INTERFACE=127.0.0.1
 
 #php-container
 #[from 7.0 to 7.3]
-PHP_VERSION=7.2
+PHP_VERSION=7.4
 #[0|2] - 2 for php <= 7.1 and 0 for php >= 7.2
 PHP_MBSTRING_FUNC_OVERLOAD=0
 PHP_FPM_PORT=10000
@@ -30,19 +30,15 @@ MEMCACHE_VERSION='4.0.5.2'
 
 
 #XDEBUG
-# [2.9.3|3.0.0|empty to latest]
-XDEBUG_VERSION=''
+# [more than 3 or empty to latest]
+XDEBUG_VERSION='3.0.0'
 # must be the same as your ide
 XDEBUG_PORT=9003
 # [host.docker.internal|172.17.0.1] 172.17.0.1 - docker's default interface
-XDEBUG_HOST=host.docker.internal
-#For version higher or equal 3.x.x
+XDEBUG_HOST=172.17.0.1
 XDEBUG_MODE=debug
 XDEBUG_START_WITH_REQUEST=default
 XDEBUG_DISCOVER_CLIENT_HOST=false
-#For version lower than 3
-XDEBUG_REMOTE_ENABLE=1
-XDEBUG_CONNECT_BACK=0
 
 
 #mailhog-container
@@ -56,11 +52,11 @@ DB_HOST=database
 DB_TYPE=mariadb
 # [10.5.5|latest|...]
 DB_VERSION=10.5.5
-DB_NAME=@DB_NAME@
-DB_USER=@DB_USER@
-DB_PASSWORD=@DB_PASSWORD@
+DB_NAME=bitrix
+DB_USER=bitrix
+DB_PASSWORD=db_pass
 DB_USER_BITRIX=root
-DB_PASSWORD_BITRIX=@DB_ROOT_PASSWORD@
+DB_PASSWORD_BITRIX=db_pass_root
 DB_PORT=3306
 
 #nginx-container
