Changes for xdebug

--- a/.env.template
+++ b/.env.template
@@ -39,6 +39,8 @@ XDEBUG_HOST=172.17.0.1
 XDEBUG_MODE=debug
 XDEBUG_START_WITH_REQUEST=default
 XDEBUG_DISCOVER_CLIENT_HOST=false
+# must be the same that you typed in your IDE
+SERVER_NAME=localhost
 
 
 #mailhog-container
