--- a/images/php/conf.d/99-xdebug.ini
+++ b/images/php/conf.d/99-xdebug.ini
@@ -11,5 +11,5 @@ xdebug.remote_host = "127.0.0.1"
 xdebug.remote_log = "/var/log/php/xdebug.log"
 ;The following params for version higher or equal 3
 ;xdebug.mode=off it will be added like a new string in dockerfile
-xdebug.start_with_request = trace
+xdebug.start_with_request = default
 xdebug.discover_client_host = false
